# nexum

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  audit.toml  build.rs  cliff.toml  flake.nix  justfile  release.toml  rust-toolchain.toml
apdu/: Cargo.toml  release.toml
apdu/.devcontainer/: devcontainer.json
apdu/crates/core/: Cargo.toml  README.md
apdu/crates/core/src/: error.rs
apdu/crates/core/src/processor/: mod.rs  processors.rs
apdu/crates/core/src/response/: mod.rs
apdu/crates/globalplatform/: README.md
apdu/crates/globalplatform/examples/: install_cap.rs  list_applications.rs  open_and_analyze_cap.rs  select_and_open_channel.rs
apdu/crates/globalplatform/src/: application.rs  util.rs
apdu/crates/globalplatform/src/commands/: get_response.rs  get_status.rs  load.rs  mod.rs
apdu/crates/macros/: Cargo.toml
apdu/crates/macros/examples/: read_record.rs
apdu/crates/pcsc/: Cargo.toml
apdu/crates/pcsc/examples/: connect.rs  select_aid.rs
apdu/crates/pcsc/src/: config.rs  error.rs  monitor.rs  transport.rs  util.rs
apdu/crates/pcsc/src/event/: callback.rs  handler.rs
apdu/crates/pcsc/tests/common/: mod.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/commands/: applet.rs  card_operations.rs  credentials.rs  data_management.rs  handler.rs  handler_additional.rs  key_operations.rs  mod.rs
crates/cli/src/utils/: mod.rs  reader.rs  session.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: card.rs  error.rs  lib.rs  transport.rs
crates/core/src/command/: error.rs  mod.rs
crates/core/src/executor/: error.rs  ext.rs  mod.rs
crates/core/src/processor/: error.rs  mod.rs  secure.rs
crates/core/src/response/: error.rs  mod.rs  status.rs  utils.rs
crates/core/src/transport/: error.rs  mod.rs
crates/extension/: Cargo.toml
crates/extension/browser-ui/: Cargo.toml  build.rs  index.html
crates/extension/browser-ui/src/: constants.rs  helper.rs  lib.rs  main.rs
crates/extension/browser-ui/src/components/cluster/: address_recipient.rs  address_recipient_full.rs  box_main.rs  column.rs  fira.rs  focus.rs  mod.rs  row.rs  value.rs
crates/extension/browser-ui/src/components/general/: appear_as_mm_toggle.rs  cannot_connect_sub.rs  chain_button.rs  chain_button_label.rs  chain_select.rs  download.rs  frame_button.rs  mod.rs  not_connected.rs  overlay.rs  settings_scroll.rs  summon_frame_button.rs  unsupported_origin.rs  unsupported_tab.rs
crates/extension/browser-ui/src/pages/: settings.rs
crates/extension/browser-ui/src/panels/: frame_connected.rs  main.rs  unsupported_tab.rs
crates/extension/chrome-sys/: Cargo.toml
crates/extension/chrome-sys/src/: alarms.rs  idle.rs  port.rs
crates/extension/injected/: Cargo.toml
crates/extension/injected/src/: provider.rs
crates/extension/injector/: Cargo.toml
crates/extension/injector/src/: lib.rs
crates/extension/public/: index.html  injected.js  manifest.json
crates/extension/src/: inject.rs  lib.rs
crates/extension/worker/src/: builder.rs  lib.rs  provider.rs  state.rs
crates/extension/worker/src/events/: alarm.rs  runtime.rs
crates/globalplatform/: Cargo.toml  README.md
crates/globalplatform/examples/: delete_package.rs  install_cap.rs  list_applications.rs  load_cap_file.rs  open_and_analyze_cap.rs  select_and_open_channel.rs
crates/globalplatform/src/: application.rs  constants.rs  crypto.rs  error.rs  lib.rs  load.rs  secure_channel.rs  session.rs  util.rs
crates/globalplatform/src/commands/: delete.rs  external_authenticate.rs  get_response.rs  get_status.rs  initialize_update.rs  install.rs  load.rs  mod.rs  put_key.rs  select.rs  store_data.rs
crates/injector/: Cargo.toml
crates/injector/src/: lib.rs
crates/macros/: Cargo.toml  README.md
crates/macros/examples/: custom_parser.rs  get_data.rs  get_data_simplified.rs  read_record.rs  select.rs
crates/macros/src/: command.rs  lib.rs  response.rs  utils.rs
crates/nexum/extension/browser-ui/: Cargo.toml  Trunk.toml
crates/nexum/extension/browser-ui/src/: constants.rs  helper.rs  lib.rs  main.rs
crates/nexum/extension/browser-ui/src/components/: mod.rs
crates/nexum/extension/worker/: Cargo.toml
crates/nexum/extension/worker/src/: builder.rs  lib.rs  provider.rs  state.rs  subscription.rs
crates/nexum/runtime/: Cargo.toml
crates/nexum/runtime/src/: main.rs
crates/pcsc/: Cargo.toml  README.md
crates/pcsc/examples/: apdu_shell.rs  connect.rs  list_readers.rs  monitor_events.rs  select_aid.rs
crates/pcsc/src/: config.rs  error.rs  lib.rs  manager.rs  monitor.rs  reader.rs  transport.rs
crates/pcsc/src/event/: channel.rs  handler.rs  mod.rs
crates/pcsc/tests/common/: mod.rs  transport_tests.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: frame.rs  lib.rs  message.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  rpc.rs
crates/rpc/src/namespaces/: eth.rs  mod.rs  net.rs  wallet.rs  web3.rs
crates/signer/: Cargo.toml
crates/signer/examples/: send_transaction.rs
crates/signer/src/: lib.rs  signer.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  config.rs  config_tab.rs  lib.rs  main.rs  signers.rs
crates/tui/src/widgets/: prompts.rs
crates/worker/: Cargo.toml
crates/worker/src/: builder.rs  events.rs  lib.rs  provider.rs  singleton.rs  state.rs  subscription.rs
crates/worker/src/events/: alarm.rs  idle.rs  mod.rs  runtime.rs  tabs.rs
docs/: ARCHITECTURE.md
keycard/: Cargo.toml  cliff.toml
keycard/.devcontainer/: devcontainer.json
keycard/crates/cli/src/: main.rs
keycard/crates/cli/src/commands/: applet.rs  card_operations.rs  credentials.rs  key_operations.rs  mod.rs
keycard/crates/cli/src/utils/: session.rs
keycard/crates/keycard/: Cargo.toml
keycard/crates/keycard/src/: application.rs  validation.rs
keycard/crates/keycard/src/commands/: generate_key.rs  mod.rs  mutually_authenticate.rs  pair.rs  pin.rs  remove_key.rs
keycard/crates/keycard/src/types/: mod.rs
keycard/crates/signer/: Cargo.toml
modules/example/: Cargo.toml
modules/example/src/: lib.rs
(+217 files in other folders)
