[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0"
homepage = "https://nxm.rs"
repository = "https://github.com/nxm-rs/nexum"
exclude = [".github/"]
authors = ["Nexum Contributors"]

[workspace]
members = [
    "crates/apdu/core",
    "crates/apdu/globalplatform",
    "crates/apdu/macros",
    "crates/apdu/pcsc",

    "crates/nexum/extension/chrome-sys/",
    "crates/nexum/extension/worker/",
    "crates/nexum/extension/injected/",
    "crates/nexum/extension/injector/",
    "crates/nexum/extension/browser-ui/",
    "crates/nexum/primitives/",
    "crates/nexum/rpc/",
    "crates/nexum/tui/",
]
default-members = ["crates/nexum/rpc", "crates/nexum/tui/"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.dependencies]
async-lock = "2.5"
wasm-bindgen = { version = "0.2.95", features = ["serde", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-utils = "0.2.0"
js-sys = "0.3.72"
futures = "0.3"
web-sys = { version = "0.3.72", features = ["Window", "WebSocket", "console", "MessageEvent", "Event", "EventListener", "Element", "HtmlHeadElement", "HtmlScriptElement", "CustomEvent", "CustomEventInit", "Storage"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-test = "0.3"
tracing-error = "0.2.0"
wasm-tracing = "0.2.1"
wasm-bindgen-futures = "0.4.45"
jsonrpsee = { version = "0.24.7", features = ["wasm-client", "jsonrpsee-core", "jsonrpsee-types", "client-core", "client-web-transport" ] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
tokio = { version = "1.45.0", features = ["full"] }
eyre = "0.6.12"

console_error_panic_hook = "0.1.7"

alloy-chains = { version = "0.1.47", features = ["serde"] }
alloy = { version = "1.0.3", features = ["signer-keystore", "provider-ws", "eip712", "signer-ledger"] }

chrome-sys = { path = "crates/nexum/extension/chrome-sys" }
worker = { path = "crates/nexum/extension/worker" }
injected = { path = "crates/nexum/extension/injected" }
injector = { path = "crates/nexum/extension/injector"}
nexum-primitives = { path = "crates/nexum/primitives" }
rpc = { path = "crates/nexum/rpc" }

# Common
thiserror = { version = "2.0", default-features = false }
derive_more = { version = "2", default-features = false, features = ["display"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "serde"] }
clap = { version = "4.5", features = ["derive"] }


# APDU
## APDU crates
nexum-apdu-core = { version = "0.1.0", path = "crates/apdu/core" }
nexum-apdu-macros = { version = "0.1.0", path = "crates/apdu/macros" }
nexum-apdu-globalplatform = { version = "0.1.0", path = "crates/apdu/globalplatform" }
nexum-apdu-transport-pcsc = { version = "0.1.0", path = "crates/apdu/pcsc" }

## Crypto
cipher = { version = "0.4", default-features = false }
cbc = { version = "0.1", default-features = false }
cbc-mac = { version = "0.1", default-features = false }
des = { version = "0.8", default-features = false }
zeroize = { version = "1.8", features = ["derive"] }

## PC/SC
pcsc = { version = "2.9.0", default-features = false }

## Serialization & parsing
bytes = { version = "1.10", default-features = false }
iso7816-tlv = { version = "0.4.4" }
hex = "0.4.3"

## Concurrency
crossbeam-channel = { version = "0.5", default-features = false }

## Macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
heck = "0.5"

## Miscellaneous
rand = "0.9"
zip = { version = "4.0.0", default-features = false }
