[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "AGPL-3.0-or-later"
homepage = "https://nxm.rs"
repository = "https://github.com/nxm-rs/nexum"
exclude = [".github/"]
authors = ["Nexum Contributors"]

[workspace]
members = [
    "crates/nexum/extension/worker/",
    "crates/nexum/extension/injected/",
    "crates/nexum/extension/injector/",
    # apparently leptos packages fail to compile with just cargo build
    "crates/nexum/extension/browser-ui/",
    "crates/nexum/primitives/",
    "crates/nexum/rpc/",
    "crates/nexum/tui/",
]
default-members = ["crates/nexum/rpc", "crates/nexum/tui/"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
async-lock = "3"
wasm-bindgen = { version = "0.2", features = ["serde", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-utils = "0.2"
js-sys = "0.3"
futures = "0.3"
web-sys = { version = "0.3", features = ["Window", "WebSocket", "console", "MessageEvent", "Event", "EventListener", "Element", "HtmlHeadElement", "HtmlScriptElement", "CustomEvent", "CustomEventInit", "Storage"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-test = "0.3"
tracing-error = "0.2"
wasm-tracing = "2"
wasm-bindgen-futures = "0.4"
jsonrpsee = { version = "0.24", features = ["wasm-client", "jsonrpsee-core", "jsonrpsee-types", "client-core", "client-web-transport"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"

console_error_panic_hook = "0.1"

alloy-chains = { version = "0.2", features = ["serde"] }
alloy = { version = "1", features = ["signer-keystore", "provider-ws", "eip712", "signer-ledger"] }

nexum-chrome-sys = { git = "https://github.com/nxm-rs/nexum-chrome-sys", features = ["runtime", "tabs", "alarms", "idle", "action", "scripting", "serde"] }
nexum-chrome-gloo = { git = "https://github.com/nxm-rs/nexum-chrome-sys", features = ["runtime", "tabs", "alarms"] }
worker = { path = "crates/nexum/extension/worker" }
injected = { path = "crates/nexum/extension/injected" }
injector = { path = "crates/nexum/extension/injector"}
nexum-primitives = { path = "crates/nexum/primitives" }
nexum-rpc = { path = "crates/nexum/rpc" }

# Common
thiserror = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false, features = ["display"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "serde"] }
clap = { version = "4", features = ["derive"] }
