[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Nullis Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/nullisxyz/apdu"
keywords = ["apdu", "globalplatform", "smart-card", "cryptography", "iso7816"]
exclude = ["benches/", "tests/", "crates/**/examples/*"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.rust-analyzer]
check.all_targets = true
check.all_features = true
cargo.features = ["all"]

[workspace.dependencies]
# APDU crates
nexum-apdu-core = { version = "0.1.0", path = "crates/core" }
nexum-apdu-macros = { version = "0.1.0", path = "crates/macros" }
nexum-apdu-globalplatform = { version = "0.1.0", path = "crates/globalplatform" }
nexum-apdu-transport-pcsc = { version = "0.1.0", path = "crates/pcsc" }

# Crypto
cipher = { version = "0.4", default-features = false }
cbc = { version = "0.1", default-features = false }
cbc-mac = { version = "0.1", default-features = false }
des = { version = "0.8", default-features = false }
zeroize = { version = "1.8", features = ["derive"] }

# PC/SC
pcsc = { version = "2.9.0", default-features = false }

# Serialization & parsing
bytes = { version = "1.10", default-features = false }
iso7816-tlv = { version = "0.4.4" }
hex = "0.4.3"

# Error handling
thiserror = { version = "2.0", default-features = false }

# Concurrency
crossbeam-channel = { version = "0.5", default-features = false }

# Trait helpers
derive_more = { version = "2", default-features = false }

# Macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
heck = "0.5"

# Logging & tracing
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }

# CLI
clap = { version = "4.5" }

# Miscellaneous
rand = "0.9"
zip = { version = "4.0.0", default-features = false }
