[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Nexum Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/nxm-rs/keycard"
keywords = ["smart-card", "cryptography", "iso7816", "apdu", "keycard"]
categories = ["cryptography", "embedded", "hardware-support"]

[workspace.lints.rust]
# missing-debug-implementations = "warn"
# missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.metadata.rust-analyzer]
check.all_targets = true
check.all_features = true
cargo.features = ["all"]

[workspace.dependencies]
## nexum-apdu crates
nexum-apdu-core = { git = "https://github.com/nxm-rs/apdu" }
nexum-apdu-macros = { git = "https://github.com/nxm-rs/apdu" }
nexum-apdu-transport-pcsc = { git = "https://github.com/nxm-rs/apdu" }
nexum-apdu-globalplatform = { git = "https://github.com/nxm-rs/apdu" }

## keycard crates
nexum-keycard = { path = "crates/keycard", version = "0.1.0" }
nexum-keycard-signer = { path = "crates/signer", version = "0.1.0" }

## crypto
aes = { version = "0.8.4", default-features = false }
alloy-primitives = { version = "1.0", default-features = false }
alloy-network = { version = "1.0", default-features = false }
alloy-signer = { version = "1.0", default-features = false }
alloy-consensus = { version = "1.0", default-features = false }
coins-bip32 = { version = "0.12.0", default-features = false }
coins-bip39 = { version = "0.12.0", default-features = false }
k256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
pbkdf2 = "0.12"
sha2 = "0.10"
cbc = { version = "0.1", default-features = false }
cbc-mac = { version = "0.1", default-features = false }
cipher = { version = "0.4", default-features = false }
block-buffer = { version = "0.11.0-rc.4", default-features = false }
block-padding = { version = "0.4.0-rc.3", default-features = false }
zeroize = { version = "1.8", features = ["derive"] }

## bytes and encoding
bytes = "1"
base64 = "0.22"
iso7816-tlv = "0.4.4"
generic-array = "0.14"
unicode-normalization = "0.1"

## async
async-trait = "0.1.88"

## misc
clap = { version = "4", features = ["derive"] }
colored = "3.0"
anyhow = "1"
rand = { version = "0.9" }
rand_v8 = { version = "0.8", package = "rand" }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
derive_more = { version = "2.0", features = ["from", "display", "into"] }
parking_lot = "0.12"
tokio = { version = "1", default-features = false }
