[package]
name = "nexum-apdu-globalplatform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "GlobalPlatform implementation for smart card management"

[lints]
workspace = true

[dependencies]
## apdu
nexum-apdu-core.workspace = true
nexum-apdu-macros.workspace = true
nexum-apdu-transport-pcsc.workspace = true
hex.workspace = true
rand.workspace = true
thiserror = { workspace = true, optional = true }
zip = { workspace = true, features = ["deflate"] }

## bytes
bytes.workspace = true
iso7816-tlv.workspace = true

## crypto
block-padding.workspace = true
cbc.workspace = true
cbc-mac.workspace = true
cipher.workspace = true
des.workspace = true
zeroize = { workspace = true, optional = true }

## misc
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt"] }

[features]
default = ["std", "zeroize"]
std = ["thiserror", "nexum-apdu-core/std", "cipher/std", "cbc-mac/std", "clap/std"]
zeroize = ["dep:zeroize", "cipher/zeroize", "des/zeroize", "cipher/zeroize"]

[dev-dependencies]
hex-literal = "1"
