[package]
name = "nexum-apdu-globalplatform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "GlobalPlatform implementation for smart card management"

[lints]
workspace = true

[dependencies]
# APDU dependencies
nexum-apdu-core.workspace = true
nexum-apdu-macros.workspace = true
nexum-apdu-transport-pcsc.workspace = true

# Data handling
bytes.workspace = true
iso7816-tlv.workspace = true
hex.workspace = true

# Crypto
cbc.workspace = true
cbc-mac.workspace = true
cipher = { workspace = true, features = ["block-padding"] }
des.workspace = true
zeroize = { workspace = true, optional = true }

# CLI & UI
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt"] }
tracing.workspace = true

# Utilities
rand.workspace = true
thiserror = { workspace = true, optional = true }
zip = { workspace = true, features = ["deflate"] }
derive_more = { workspace = true, features = ["deref", "deref_mut"] }

[features]
default = ["std", "zeroize"]
std = ["thiserror", "nexum-apdu-core/std", "cipher/std", "cbc-mac/std", "clap/std"]
zeroize = ["dep:zeroize", "cipher/zeroize", "des/zeroize", "cipher/zeroize"]

[dev-dependencies]
hex-literal = "1"
