[package]
name = "injector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
tracing.workspace = true
wasm-tracing.workspace = true
console_error_panic_hook.workspace = true
nexum-primitives.workspace = true
