[package]
name = "apdu-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Procedural macros for defining APDU commands and responses"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
heck.workspace = true

[dev-dependencies]
apdu-core.workspace = true
bytes.workspace = true
