[package]
name = "nexum-apdu-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Procedural macros for defining APDU commands and responses"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
heck.workspace = true

[dev-dependencies]
## nexum-apdu
nexum-apdu-core.workspace = true

## bytes
bytes.workspace = true
iso7816-tlv.workspace = true

## misc
thiserror.workspace = true
derive_more.workspace = true
