[package]
name = "apdu-transport-pcsc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "PC/SC transport implementation for APDU operations"

[lints]
workspace = true

[dependencies]
apdu-core = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true, optional = true }
pcsc.workspace = true

hex.workspace = true

crossbeam-channel = { version = "0.5", optional = true }
heapless = { version = "0.7", optional = true, default-features = false }
parking_lot.workspace = true

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["console"] }

[features]
default = ["std"]
std = ["thiserror", "crossbeam-channel", "apdu-core/std", "hex/std"]
wasm = ["wasm-bindgen", "web-sys"]
alloc = ["hex/alloc"]

[dev-dependencies]
hex = { workspace = true }
apdu-macros.workspace = true
pcsc.workspace = true
