[package]
name = "apdu-transport-pcsc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "PC/SC transport implementation for APDU operations"

[lints]
workspace = true

[dependencies]
apdu-core = { workspace = true }
pcsc.workspace = true

hex.workspace = true

crossbeam-channel = { version = "0.5", optional = true }
heapless = { version = "0.7", optional = true, default-features = false }

[features]
default = ["std"]
std = ["crossbeam-channel", "apdu-core/std", "hex/std"]
alloc = ["hex/alloc"]

[dev-dependencies]
hex = { workspace = true }
apdu-macros.workspace = true
pcsc.workspace = true
