[package]
name = "nexum-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Commonly used types in Nexum"

[dependencies]
derive_more.workspace = true
gloo-utils.workspace = true
js-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
alloy-chains.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true
web-sys.workspace = true
