[package]
name = "nexum-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
futures.workspace = true
tower = { version = "0.5", features = ["full"] }
hyper = "1.3"
serde.workspace = true
serde_json.workspace = true
jsonrpsee = { version = "0.24.7", default-features = false, features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-tls"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
url.workspace = true
alloy-chains.workspace = true
alloy.workspace = true
paste = "1.0.15"
thiserror.workspace = true
