[package]
name = "tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.30.0-alpha.3"
tokio = { workspace = true }
eyre = "0.6.12"
