[package]
name = "tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { version = "0.30.0-alpha.3", features = ["unstable-widget-ref"] }
tokio = { workspace = true }
eyre = "0.6.12"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = { workspace = true }
alloy = "1.0.3"
