[package]
name = "tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui = { version = "0.30.0-alpha.3", features = ["unstable-widget-ref"] }
tokio.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures.workspace = true
alloy.workspace = true
clap.workspace = true
rpc.workspace = true
eyre.workspace = true
figment = { version = "0.10.19", features = ["toml"] }
serde.workspace = true
url.workspace = true
alloy-chains.workspace = true
toml = { version = "0.8.22", features = ["display"] }
