[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
exclude.workspace = true

[dependencies]
js-sys.workspace = true
chrome-sys.workspace = true
nexum-primitives.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
url.workspace = true
jsonrpsee.workspace = true
uuid.workspace = true
gloo-timers.workspace = true
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
