[package]
name = "chrome-sys"
description = "Chrome API bindings for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false
test = false

[dependencies]
serde.workspace = true
serde-wasm-bindgen.workspace = true
futures.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde_json.workspace = true
tracing.workspace = true
url.workspace = true
gloo-utils.workspace = true
